kurogomaさんによるhsp3_64の更新 K-sさんによるhsp3jsの更新
Former-commit-id: 3ad05661654f63f618b9edd16bfa5113540eaeae

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.4 / onion software 1997-2014(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3 概要</h1>
 
@@ -552,13 +552,13 @@ i>
 			HSP Document Library及び、d3module,Artlet2D,SQLeleはS.Programsさんが製作されたものを同梱させていただきました。
 		</p>
 		<p>
-			hsp3dish.jsは、zakkiさんが製作されたものを同梱させていただきました。
+			hsp3dish.js(Emscripten版)は、zakkiさん、K-sさんが製作されたものをベースに実装させていただきました。
 		</p>
 		<p>
 			HSPLetは、山田 雄己(Yuki)さんが製作されたものを同梱させていただきました。
 		</p>
 		<p>
-			HSPUSBIOプラグインは、K-Kさんが製作されたものを同梱させていただきました。
+			HSPUSBIOプラグインは、K-K(瓶詰堂)さんが製作されたものを同梱させていただきました。
 		</p>
 		<p>
 			USBIO操作DLL、hidmon.dllは、irukaさん・senshuさんが作成し公開されているものを同梱させていただきました。
@@ -605,7 +605,10 @@ i>
 			hsp3utfは、tds12さんが作成し公開されているものをベースに同梱させていただきました。
 		</p>
 		<p>
-			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさんに感謝致します。
+			Linux版hsp3及びスクリプトエディタは、K-K(瓶詰堂)さんが作成し公開されているものをベースに実装させていただきました。
+		</p>
+		<p>
+			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、kurogomaさん、に感謝致します。
 		</p>
 		<p>
 			その他、HSP周辺ツール開発者ML(HSPDev-ML)の皆様及び、β版のテスト報告や、
@@ -666,7 +669,7 @@ i>
 		<a href="http://www.sharkpp.net/" target="_blank">http://www.sharkpp.net/</a>
 				</p>
 			</dd>
-			<dt>K-Kさん</dt>
+			<dt>K-K(瓶詰堂)さん</dt>
 			<dd>
 				<p>
 		<a href="http://www.binzume.net/" target="_blank">http://www.binzume.net/</a>
