#bootopt notimer が正しく機能していない不具合を修正(HSP3BT#22) mod_joystick.asでエラーが発生した場合の処理を修正 非推奨となるllmod3,hspdx,hgimgのドキュメント・サンプルを除外 ドキュメントの修正
Former-commit-id: 45ae449a2e59d23ae96d19c5e461aad3547dc237

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -31,7 +31,6 @@
 			<li><a href="#EDITOR">スクリプトエディタ</a></li>
 			<li><a href="#HSPAT">HSPアシスタント</a></li>
 			<li><a href="#BROWSER">HSPTVブラウザ</a></li>
-			<li><a href="#PEAS">Peasエディタ</a></li>
 			<li><a href="#HDL">HSP Document Library(HDL)</a></li>
 			<li><a href="#SUPPORT">HSPのサポート</a></li>
 			<li><a href="#USERCOM">HSPユーザーコミュニティ</a></li>
@@ -77,23 +76,25 @@
 
 		<h2 id="DOUSA_ENV">動作環境</h2>
 		<ul>
-			<li>Microsoft Windows 98 / Me</li>
-			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7、8、8.1</li>
+			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7、8、8.1、10</li>
 		</ul>
 		<p>
-			HSP3.4は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
+			HSP3.5は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。<br>
+			また、Windows 7、8、8.1、10及びVistaの64bit(x64)版での動作を確認しています。
 		</p>
 		<pre>
-	Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
-	HSP3.2版のエディタ(hsed3f1.exe)を使用するか、簡易版エディタ(hsed3le.exe)をご使用ください。
-	また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
+		Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
+		簡易版エディタ(hsed3le.exe)をご使用頂けば、標準的なHSPの機能はご使用頂けます。
+		また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
+
+		日本語版以外のWindowsでは、標準の「HSPスクリプトエディタ」で文字化けが発生することがあります。
+		その場合は、<a href="http://hsp.tv/make/downlist.html" target="_blank">HSPTV!サイトのダウンロードリスト</a>から、対応するツールを選択することができます。
 		</pre>
 		<p>
-			Windows 7、8、8.1及びVistaの64bit(x64)版での動作を確認しています。
 		</p>
 		<p>
-			640×480以上の解像度と、256色以上の表示が可能なディスプレイが必要
-			になります。必要なメモリ量は表示する画像サイズなどで変化します。
+			640×480以上の解像度と、256色以上の表示が可能なディスプレイが必要になります。
+			必要なメモリ量は表示する画像サイズなどで変化します。
 		</p>
 		<p>
 			HSPは単体で動作します。標準的な機能において、追加のDLLやランタイムをインストールする必要はありません。
@@ -102,7 +103,7 @@
 
 		<h2 id="PACKAGE">パッケージ構成</h2>
 		<p>
-			HSP3.4フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
+			HSP3.5フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
@@ -112,19 +113,19 @@
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
-			HSP3.4フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
+			HSP3.5フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
 			インストーラーを起動するか、または任意のディレクトリにhsp34フォルダを解凍する
 			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp34」です)
 		</p>
 		<p>
-			HSP3.4以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
+			HSP3.5以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
 			してから、新しいバージョンをインストールすることを推奨します。
-			ただし、HSP3.4のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
+			ただし、HSP3.5のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
 			以前のバージョンと競合することはありません。(過去のバージョンと同時に利用することも可能です。)
 		</p>
 		<p>
-			Windows 2000以降(XP、Vista、7、8、8.1等)では、HSP3.4のインストールフォルダに書き込み権限が必要になります。
-			インストーラーのデフォルトディレクトリ(/HSP34)にインストールを行なった場合なども、
+			Windows 2000以降(XP、Vista、7、8、8.1、10等)では、HSP3.5のインストールフォルダに書き込み権限が必要になります。
+			インストーラーのデフォルトディレクトリ(/HSP35)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
 		<p>
@@ -157,7 +158,7 @@
 
 		<h2 id="DEMO">デモンストレーション</h2>
 		<p>
-			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「サンプルデモ」
+			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「サンプルデモ」
 			を起動させてみてください。HSPのサンプルデモが始まります。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HSP3DEMO.EXEを起動させてみてください。）
 		</p>
@@ -166,16 +167,16 @@
 			色々なデモンストレーションを見ることができます。
 		</p>
 		<p>
-			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「HSPアシスタント」
+			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「HSPアシスタント」
 			を選択することで。HSPサンプルスクリプトを閲覧するための「HSPアシスタント」が起動します。
 			「HSPアシスタント」で、「Sample」のボタンを押してからファイルを選択するだけで、
 			すぐに実行・閲覧することができます。
 		</p>
 
-		<h2 id="CHANGE31">HSP3.3からの変更点</h2>
+		<h2 id="CHANGE31">HSP3.4からの変更点</h2>
 		<p>
-			HSP3.4では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.3(HSP3.32を含む)で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.4で動作させることができます。
+			HSP3.5では、上位互換となる形で機能の修正と追加を行なっています。
+			HSP3.4で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.5で動作させることができます。
 			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
 
@@ -211,7 +212,7 @@
 			HSPアシスタントにより、命令の検索、サンプルスクリプトの参照、ネットワーク素材取得などを行なうことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「HSPアシスタント」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「HSPアシスタント」
 			を選択することで、HSPアシスタントが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPAT.EXEを起動させてみてください。)
 		</p>
@@ -226,7 +227,7 @@
 			ダウンロードして楽しむことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「HSPTVブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「HSPTVブラウザ」
 			を選択することで、HSPTVブラウザが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPTV.EXEを起動させてみてください。)
 		</p>
@@ -238,21 +239,6 @@
 			HSPTVブラウザについての詳細は、<a href="hsptv.htm">別途マニュアル（hsptv.htm）</a>を参照してください。
 		</p>
 
-		<h2 id="PEAS">Peasエディタ</h2>
-		<img src="img/s_peas.jpg" alt="Peasエディタ スクリーンショット" width="320" height="249" style="float:right;">
-		<p>
-			Peasエディタを使用することにより、既存のひな形(テンプレート)を組み合わせて、
-			スクリプトを自動的に生成することができます。
-		</p>
-		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「Peasエディタ」
-			を選択することで、Peasエディタが起動されます。
-			（メニュー登録されていない場合は、展開されたディレクトリにある、AHTMAN.EXEを起動させてみてください。）
-		</p>
-		<p>
-			Peasエディタについての詳細は、<a href="peas.htm">別途マニュアル（peas.htm）</a>を参照してください。
-		</p>
-
 		<h2 id="HDL">HSP Document Library(HDL)</h2>
 		<img src="HSP Document Library/img_thumbs.png" style="float:right;">
 		<p>
@@ -262,7 +248,7 @@
 			統合的な検索とシームレスなリンクが行なわれ、スクリプトの開発効率を高めます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「ドキュメントブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「ドキュメントブラウザ」
 			を選択することで起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HDL.EXEを起動させてください。）
 		</p>
@@ -351,7 +337,7 @@
 
 		<h2 id="COPYRIGHT">著作権、ライセンスについて</h2>
 		<p>
-			HSP3.4フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
+			HSP3.5フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
 			HSP開発システムは、開発の中心となる要素で以下の項目を指します。
 		</p>
 		<ul>
@@ -627,6 +613,12 @@ i>
 		<a href="http://sprocket.babyblue.jp/" target="_blank">http://sprocket.babyblue.jp/</a>
 				</p>
 			</dd>
+			<dt>HSPセンター</dt>
+			<dd>
+				<p>
+		<a href="http://hspcenter.com/" target="_blank">http://hspcenter.com/</a>
+				</p>
+			</dd>
 			<dt>悠黒 喧史 さん</dt>
 			<dd>
 				<p>
@@ -637,24 +629,6 @@ i>
 			<dd>
 				<p>
 		<a href="http://hspnext.com/" target="_blank">http://hspnext.com/</a>
-				</p>
-			</dd>
-			<dt>ぷまさん</dt>
-			<dd>
-				<p>
-		<a href="http://dream.freespace.jp/puma/" target="_blank">http://dream.freespace.jp/puma/</a>
-				</p>
-			</dd>
-			<dt>HyperPageProjectさん</dt>
-			<dd>
-				<p>
-		<a href="http://www.hpp.be/" target="_blank">http://www.hpp.be/</a>
-				</p>
-			</dd>
-			<dt>山田 雄己(Yuki)さん</dt>
-			<dd>
-				<p>
-		<a href="http://www.group-finity.com/" target="_blank">http://www.group-finity.com/</a>
 				</p>
 			</dd>
 			<dt>fujidigさん</dt>
@@ -685,6 +659,12 @@ i>
 			<dd>
 				<p>
 		<a href="http://peppermint.jp/" target="_blank">http://peppermint.jp/</a>
+				</p>
+			</dd>
+			<dt>tds12さん</dt>
+			<dd>
+				<p>
+		<a href="https://twitter.com/lltds12" target="_blank">https://twitter.com/lltds12</a>
 				</p>
 			</dd>
 			<dt>mjhd_otsukaさん</dt>
