--- a/package/win32/doclib/plugin.htm
+++ b/package/win32/doclib/plugin.htm
@@ -25,7 +25,7 @@
 
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.4 / onion software 1997-2014(c)</a></p>
+		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</a></p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>拡張プラグイン・モジュール一覧</h1>
 
@@ -356,8 +356,7 @@
 					</p>
 					<p>
 						大量の文字列や数値をまとめてデータ管理する場合に威力を発揮します。
-						特に数値や文字列のソート機能は、大量のデータでも短時間で並び替えが可能です。
-						また、ソーススクリプトで使用している変数データの一部またはすべてをファイルに書き出し、
+						ソーススクリプトで使用している変数データの一部またはすべてをファイルに書き出し、
 						読み込みを行なう機能を持っています。
 						その他にも、CSV形式のファイルを配列に変換したり検索する機能、実数の乱数発生などが
 						用意されています。
@@ -500,52 +499,6 @@
 					</p>
 					<p>
 						詳しくは、別途ドキュメント「<a href="hspusbio/hspusbio.txt">hspusbio.txt</a>」を参照してください。
-					</p>
-				</td>
-			</tr>
-		</table>
-
-		<h3 id="HGIMG">HGIMG.DLL/HGIMGX.DLL</h3>
-		<table summary="拡張プラグインHGIMGおよびHGIMGXの紹介です。" class="pluginlist">
-			<caption>HGIMG.DLL/HGIMGX.DLLの紹介</caption>
-			<tr>
-				<th width="20%">拡張プラグイン</th>
-				<th width="30%">HGIMG.DLL/HGIMGX.DLL</th>
-				<th width="5%">Ver2.61</th>
-				<th width="25%">作者:おにたま</th>
-				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
-			</tr>
-			<tr>
-				<td colspan="5">
-					<p>
-						HGIMG3よりも古い形式の画像処理プラグインです。
-					</p>
-					<p>
-						このプラグインは、HSP2.61でサポートされていたもので、互換性の問題などで、
-						HGIMG3が使用できない場合に利用することを想定しています。
-						通常は、HGIMG3が上位互換で作成されているので、そちらをご使用下さい。
-						簡単なものであれば、HGIMG.DLL用のソースは、そのままHGIMG3に移行することができます。
-					</p>
-					<p>
-						HGIMG.DLLはフルカラー、パレットモードでの2D・3Dグラフィック表示をサポートします。
-						スプライトを使用した2Dゲームから、3Dモデルを使った本格的なソフトまで幅広く
-						利用することができます。HGIMG.DLLで追加される主な機能は以下の通りです。
-					</p>
-					<ul>
-						<li>フルカラー、パレットモード、DirectXの有無などを切り替え可能なアーキテクチャ</li>
-						<li>2Dスプライト、3Dポリゴンなどを共通の命令で設定可能な描画エンジン</li>
-						<li>回転拡大縮小、α合成、透明色抜き処理、タイリング(BG表示)などの特殊効果サポート</li>
-						<li>3D座標上の2Dスプライトと3Dポリゴンを混在可能なワールド管理</li>
-						<li>3Dの階層構造を持ったポリゴンモデル表示、およびアニメーション管理</li>
-						<li>文字フォントテクスチャをもとにメッセージを合成表示</li>
-						<li>スプライトの表示、移動の管理および衝突判定機能</li>
-						<li>await命令より細かい単位でのウェイトと処理の負荷検出機能</li>
-						<li>CPU処理や描画の負荷が変わってもアニメーションの速度を一定に保つ(フォールオフレンダリング)</li>
-						<li>32bit float精度によるジオメトリ演算</li>
-						<li>MX形式、DXF形式による3Dモデル表示、MA形式によるアニメーションデータの読み込み</li>
-					</ul>
-					<p>
-						詳しくは、別途ドキュメント「<a href="hgimg.txt">hgimg.txt</a>」を参照してください。
 					</p>
 				</td>
 			</tr>
