--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -9,22 +9,22 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,更新情報,アップデート">
 	<meta name="description" content="HSPの更新情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.4 アップデートガイド</title>
+	<title>HSP3.5 アップデートガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.4 / onion software 1997-2014(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3.4 アップデートガイド</h1>
+		<h1>HSP3.5 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#HSP34UPDATE">HSP3.4のアップデート概要</a></li>
-			<li><a href="#DIFF34">HSP3.4の変更点について</a></li>
-			<li><a href="#HSED">標準スクリプトエディタの更新について</a></li>
+			<li><a href="#HSP34UPDATE">HSP3.5のアップデート概要</a></li>
+			<li><a href="#DIFF34">HSP3.5の変更点について</a></li>
 			<li><a href="#HSPDISH">HSP3Dishについて</a></li>
+			<li><a href="#HSPOBSOLETE">パッケージの同梱終了について</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
 				<ol>
@@ -61,19 +61,19 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.4は、HSP3.3及びHSP3.32に替わる新しいバージョンです。
+			HSP3.5は、HSP3.4に替わる新しいバージョンです。
 			大幅な仕様の変更はなく、あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.4とHSP3.3の違いについて。
+			ここでは、HSP3.5とHSP3.4の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-	<h2 id="HSP34UPDATE">HSP3.4のアップデート概要</h2>
+	<h2 id="HSP34UPDATE">HSP3.5のアップデート概要</h2>
 		<p>
-		HSP3.4は、特に変更を意識することなく、HSP3.3やHSP3.32と同様にお使い頂けます。
-		HSP3.4で変更された項目の概要は、以下の通りです。
+		HSP3.5は、特に変更を意識することなく、HSP3.4と同様にお使い頂けます。
+		HSP3.5で変更された項目の概要は、以下の通りです。
 		</p>
 
 		<dl>
@@ -83,19 +83,20 @@
 			</dt><br>
 			<dd>
 			<p>
-			iOS/androidでの実行をサポートする<a href="http://hsp.tv/make/hsp3dish.html" target="_blank">HSP3Dish</a>の各種機能を拡充しています。
-			また、新たにHSP3Dishで作成したスクリプトをWEBブラウザ上で実行するためのシステム、hsp3dish.jsを同梱しています。
+			iOS/android/html5(WebGL)上での実行をサポートする<a href="http://hsp.tv/make/hsp3dish.html" target="_blank">HSP3Dish</a>の各種機能を拡充しています。
+			新たにLinux及びRaspberry Piのサポートを開始しました。(ダウンロードは別パッケージになっています)
+			最新の端末に対応できる新しいSDKへの対応や、各種センサー情報の取得、ネットワークアクセス、スプライト描画などの機能も拡充しています。
 			幅広いデバイスへの変換をサポートするHSP3Dish Helperツールも、より便利で手軽に利用できようになりました。
 			</p>
 			</dd>
 
 			<dt>
-			HGIMG4プラグインの追加
+			HGIMG4プラグインの更新
 			</dt><br>
 			<dd>
 			<p>
-			ハイレベルな3D表現を可能にする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4プラグイン</a>を同梱しています。
-			シェーダーや物理エンジンなど最新のテクノロジーを利用したソフトウェアを、HSPから手軽に開発することができる、まったく新しいプラグインです。
+			ハイレベルな3D表現を可能にする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4プラグイン</a>を大幅に更新しています。
+			システムの安定度が向上したほか、ポストエフェクト、イベント制御機能が追加され、より手軽に使用できるようになっています。また、DirectXによる描画の選択が可能になったほか、	android,iOS,Linuxでの動作も新たにサポートしています。
 			</p>
 			</dd>
 
@@ -104,127 +105,83 @@
 			</dt><br>
 			<dd>
 			<p>
-			アニメーション効果などに活用できるイージング制御のための、setease命令、getease、geteasef関数を標準で追加しています。
-			さらに画像をプリンタで印刷するための新規プラグインhspprintを追加しているほか、hspsock、hspcmpといったプラグインも更新されています。
+			従来HSPDAプラグインの命令であった、sortval,sortstr,sortnote,sortgetなどのソート機能を標準命令として実装しています。
+			複数行文字列から特定の文字列を持つ行を検索するnotefind関数、変数バッファのサイズを調べるvarsize関数なども追加されています。
+			また、hspextプラグインにバイナリデータを送信を行なうcomputb命令が追加されています。
 			</p>
 			</dd>
 
 			<dt>
-			HSP3オフィシャル3D素材
+			HSP3オフィシャル素材
 			</dt><br>
 			<dd>
 			<p>
-			hgimg3/hgimg4で利用できる、HSP3オフィシャル3D素材 "珠音（たまね）"を同梱しています。
-			各種アニメーションも用意され、フリーに使用できる素材データです。
-			</p>
-			</dd>
-
-			<dt>
-			Windows8.1の対応について
-			</dt><br>
-			<dd>
-			<p>
-			HSP3.4では、Windows8及びWindows8.1上での動作を確認しています。
-			HSP3.31までのバージョンでは、Windows8(x64)上でウインドウを閉じる(終了する)際にランタイムエラーが表示されることがありました。
-			これは、動作自体に影響はなく、システム上で問題が起こるものではありませんが、Windows8上での動作を安定させるためにも最新版でのご使用を推奨します。
+			自由に使える素材としてHSP3オフィシャルキャラクター "珠音（たまね）"を始めとした各種ファイルが同梱されています。
+			また、hgimg3/hgimg4で利用できる、HSP3オフィシャル3D素材 "珠音（たまね）"を同梱しています。
+			デフォルメ版とリアル頭身版に各種アニメーションも用意され、手軽に使用できます。
+			ゲームを中心に新たなサンプルスクリプトも数多く同梱し、オリジナルの作品作りに活用頂けます。
 			</p>
 			</dd>
 
 		</dl>
 
 
-		<h2 id="DIFF34">HSP3.4の変更点について</h2>
+		<h2 id="DIFF34">HSP3.5の変更点について</h2>
 		<p>
-			HSP3.4は、HSP3.3からのメジャーアップデートバージョンです。
-			HSP3.3をすでに使っているユーザーは、特に意識することなくHSP3.4をお使いいただけるはずです。
+			HSP3.5は、HSP3.4からのメジャーアップデートバージョンです。
+			HSP3.4をすでに使っているユーザーは、特に意識することなくHSP3.5をお使いいただけるはずです。
 		</p>
 		<p>
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.4でHSP3.32から追加変更された主要な項目は以下の通りです。
+			HSP3.5でHSP3.4から追加変更された主要な項目は以下の通りです。
 		</p>
 		<UL>
-		<LI>HSP3Dishで作成したスクリプトをWEBブラウザ上で実行するhsp3dish.jsを同梱しています
-		<LI>iOS/androidでの実行をサポートするHSP3Dishの各種機能を拡充しています
+		<LI>標準機能の安定性向上と不具合の修正を行なっています
+		<LI>複数行文字列から特定の文字列を持つ行を検索するnotefind関数を追加しています
+		<LI>変数が格納しているデータのバッファサイズを調べるvarsize関数を追加しています
+		<LI>ソートを行なうための、sortval,sortstr,sortnote,sortget命令を標準で追加しています
+		<LI>ランタイム動作の設定を行なうための新規プリプロセッサ命令、#bootoptを追加しています
+		<LI>arduino制御、USBIO制御などのサンプルコードを拡充しています
+		<LI>mes,print命令に改行を無効にするオプションが追加されています
+		<LI>await命令を使用しないスクリプトでマルチメディアタイマーによる負荷を抑制しています
+		<LI>コマンドライン版のコードコンパイラを新たに付属しています
+		<LI>スクリプトエディタに関する不具合、機能改善を行なっています
+		<LI>UTF8の文字コードを扱うことのできるランタイムhsp3utfを同梱しています
+		<LI>64bitアプリとして動作するランタイムhsp3_64をβ版として同梱しています
+		<LI>HGIMG4の大幅な更新、ポストエフェクト、イベント制御機能の追加を行なっています
+		<LI>HGIMG4でのみ使用が可能だった、setcls、celputm命令がHSP3Dishすべてで使用可能になっています
 		<LI>HSP3Dish Helperツールも、より便利で手軽に利用できようになりました
-		<LI>イージング制御のための、setease命令、getease、geteasef関数を追加しています
-		<LI>画像をプリンタで印刷するための新規プラグインhspprintを追加しています
-		<LI>スクリプト中の全角スペースをスペース・タブと同様に無視するように修正されています
-		<LI>ハイレベルな3D表現を可能にするHGIMG4プラグインを同梱しています
-		<LI>オブジェクトファイルの出力データを調整しています
-		<LI>hspcmpプラグインのhsc_comp命令にUTF8出力オプションを追加しています
-		<LI>hspsockプラグインでサーバーが同一ポートを共有できるように修正されています
-		<LI>HSP3オフィシャル3D素材 "珠音（たまね）"をhgimg3/hgimg4フォルダに同梱しています
-		<LI>HGIMG3にある不具合のいくつかを修正しました
+		<LI>hspextプラグインでバイナリデータのシリアル送信を行なうcomputb命令を追加しています
+		<LI>HSP3オフィシャル素材 "珠音（たまね）"を2D,3Dともに大幅に追加しています
+		<LI>HGIMG3にある不具合のいくつかを修正しています
+		<LI>llmod3,HGIMG/HGIMGX,HSPDXのプラグイン・モジュールは非推奨となっています
+		<LI>HSPLetのパッケージをフルセットから除外しています
 		</UL>
 		<p>
-			HSP3.3から追加変更された主要な項目は以下の通りです。
+		バージョンアップにあたり互換性の影響が出る可能性は、以下があります。これ以外で、問題が出ることは想定していません。
 		</p>
 		<UL>
-		<LI>自由に使用できる標準の素材がhsptvフォルダに追加されています
-		<LI>文字列の置換を行なう新規命令、strrepを追加しています
-		<LI>await命令による待ち時間の精度が向上しています
-		<LI>標準でPNG、TGA、PSDフォーマットの読み込みに対応しています
-		<LI>HSP3Dish Helperを同梱し、androidデバイスへの変換をサポートします
-		<LI>HSPソースコンバーターによりCソースコードへの変換が可能です
-		<LI>HSPスクリプトエディタのエンジン(Footy2)を更新し、表示や操作面の改善を行ないました
-		<LI>USB機器のコントロールに関するプラグイン、モジュールを同梱しています
-		<LI>セキュリティ対策のためDPM暗号化のアルゴリズムを調整しています
+		<LI>新規命令として追加されたキーワード(sortval,sortstr,sortnote,sortget,notefind,varsize命令ほか)が既存の変数やラベル名と衝突することがあります
+		<LI>HSP3Dishで使用されるキーワードが標準のコンパイル時にも定義されています。これにより、以下のキーワードを使用している(HSP3Dishを使用しない)スクリプトで変数名やラベル名と衝突することがあります。
+		<UL>
+		gfilter setreq getreq mmvol mmpan mmstat mtlist mtinfo devinfo devinfoi devprm
+		devcontrol httpload httpinfo gmulcolor setcls celputm
 		</UL>
-		<p>
-			バージョンアップにあたり互換性の影響が出る可能性は、以下があります。これ以外で、問題が出ることは想定していません。
-		</p>
+		<LI>HGIMG4の一部の仕様が変更されています。詳しくは、hgimg4.txtを参照してください
+		<LI>HSPLetのパッケージは同梱されていません。使用する場合は別途ダウンロードが必要となります
+		</UL>
 
-
-	<h2 id="HSED">標準スクリプトエディタの更新について</h2>
-
-<p>
-	HSP3.32から、エディタのエンジンとして使用しているFooty2ライブラリを新しいバージョンに更新しています。
-	これにより、以前のエンジン(Footy1)による不具合や制限が解消されます。
-	エディタの操作自体は基本的に以前と変わっていませんが、以下の点についてご注意下さい。
-<br>
-<ul>
-<li>Footy2ライブラリの制約により、<b>Windows2000より前のOS(Windows 95/98/Me)は、動作対象外となります</b><br>
-これは、エディタの動作に関する制約であり、HSP3自体はWindows 98以降で使用することができます。
-<br>
-	これらのOSをご利用のユーザーには大変不自由をお掛けしますが、同梱されているシンプルなエディタ(hsed3le.exe)か、またはHSP3.21まで使用していたFooty1版のエディタ(hsed3f1.exe)をお使い頂くことを推奨致します。
-	Windows 2000以降のOS(Windows XP,Vista,7)環境であれば、新しいエディタは特に問題なく使用することができます。
-<br>
-<li>オートインデント利用時の空行はTABが1つ含まれた行となります<br>
-以前のスクリプトエディタでは、ただの空行とされていました。今後のバージョンでは、以前のエディタに近い動作に修正していきたいと考えています。
-</ul>
-<br>
-	スクリプトエディタの更新により、エディタ機能を一部修正しています。
-<br>
-<br>
-<pre>
-	・「表示」メニューを設定ダイアログに統合
-	・「カーソル」メニューを「編集」メニューに統合
-	・キーワード色付けの変更
-	・hspdef.asで定義されるマクロを色付けされるように修正
-	・起動・終了時にHSPアシスタントと連携されるように修正
-	・URL、メールアドレスの強調表示
-</pre>
-	尚、設定項目の変更があるため、HSP3.3より前のスクリプトエディタと
-	設定の記録先を変更しています。いままでの設定は引き継がれませんのでご注意ください。
-<br>
-<br>
-	以前のエディタとの動作の違いや、新しいエディタの動作が不安定などの理由で、
-	HSP3.21まで使用していたFooty1版のエディタを使用したい方は、HSPインストールディレクトリにあるhsed3f1.exeをお使い頂くことができます。<br>
-	その場合は、hsed3f1.exeをリネームするか、関連付け先を変更してご使用ください。
-			</p>
 
 	<h2 id="HSPDISH">HSP3Dishについて</h2>
 		<p>
-		HSP3Dishは、HSP3の動作環境を様々なデバイス上で構築するための
-		追加セットです。Windows上で開発したスクリプトを、WEBブラウザ、iOS、androidなど別なデバイスで動作させるための仕組みを提供します。
+		HSP3Dishは、HSP3の動作環境を様々なデバイス上で構築するための追加セットです。
+		Windows上で開発したスクリプトを、別なデバイスで動作させるための仕組みを提供します。
 		</p>
 		<p>
-		HSP3.3に含まれる、HSP3Dishランタイムは、通常版のHSP3と比べて機能が制限され、
-		いくつかの特殊な機能が付加されています。
-		HSP3Dishに合わせたスクリプトを作成することで、iPhone/iPad、またはandroidといったスマートフォンなど
-		異なるシステム上での動作に繋げることが可能です。
+		HSP3Dishランタイムは、通常版のHSP3と比べて機能が制限され、いくつかの特殊な機能が付加されています。
+		HSP3Dishに合わせたスクリプトを作成することで、iPhone/iPad、またはandroidといったスマートフォンやLinux,Webブラウザなど異なるシステム上での動作を実現します。
 		</p>
 		<p>
 		特殊な利用を想定したHSP3DishですがWindows上で使用する上では、
@@ -238,7 +195,28 @@
 		</p>
 
 
-		<h2 id="DIFF2">HSP2との違いについて</h2>
+	<h2 id="HSPOBSOLETE">パッケージの同梱終了について</h2>
+		<p>
+		これまでフルセットに同梱されていたHSPLetパッケージは、同梱されません。
+		HSPLetはJavaアプレットによってHSPスクリプトを動作させる仕組みですが、コードが古くなっていること、
+		アプレットのセキュリティ仕様変更により使用が困難なことなどの理由により、パッケージからは除外致しました。
+		HSPLetをご使用する場合は、別途HSPTV!のダウンロードリストから取得する必要がありますのでご注意ください。
+		</p>
+		<p>
+		また、以下のプラグイン・モジュールは、非推奨として扱われているため、マニュアル及びヘルプは、提供されません。
+		</p>
+		<UL>
+		<LI>llmod3 -> HSP3に対応した各種モジュールをご使用ください
+		<LI>HGIMG / HGIMGX (3D描画用プラグイン) -> HGIMG3/HGIMG4をご使用ください
+		<LI>HSPDX (2D描画用プラグイン) -> HSP3DISHをご使用ください
+		</UL>
+		<p>
+		これらのプラグイン・モジュールは、コードが古くなっており、現行のWindows上での動作が保証されません。
+		既存コードのコンパイル及び実行はサポートされますが、将来のバージョンでは対応されない可能性があります。
+		</p>
+
+
+	<h2 id="DIFF2">HSP2との違いについて</h2>
 		<p>
 			HSP3は、HSP2までの仕様とプログラムを大幅に見直し、再構築したHSP3の最新バージョンです。
 			ver2.61までに培われた親しみやすさ、習得のしやすさ、シンプルさといった資産を継承しながら、
