--- a/package/win32/doclib/hsptv_res.htm
+++ b/package/win32/doclib/hsptv_res.htm
@@ -14,11 +14,12 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.4 / onion software 1997-2014(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</p>
 		<h1>HSPTVフォルダ素材一覧</h1>
 
 		<h2 id="GRAPHICS">画像一覧</h2>
 		<pre>
+	<a href="../hsptv/baku.bmp">baku.bmp</a>
 	<a href="../hsptv/bg01.jpg">bg01.jpg</a>
 	<a href="../hsptv/bg02.jpg">bg02.jpg</a>
 	<a href="../hsptv/bg03.jpg">bg03.jpg</a>
@@ -34,14 +35,21 @@
 	<a href="../hsptv/bgtex.bmp">bgtex.bmp</a>
 	<a href="../hsptv/bom.bmp">bom.bmp</a>
 	<a href="../hsptv/efx.bmp">efx.bmp</a>
-	<a href="../hsptv/hsp3scr.jpg">hsp3scr.jpg</a>
-	<a href="../hsptv/hsplogo8.bmp">hsplogo8.bmp</a>
-	<a href="../hsptv/hsptv_img.bmp">hsptv_img.bmp</a>
-	<a href="../hsptv/hsptv_img.png">hsptv_img.png</a>
 	<a href="../hsptv/jp6girl.bmp">jp6girl.bmp</a>
+	<a href="../hsptv/king_knight.bmp">king_knight.bmp</a>
+	<a href="../hsptv/king_knight.png">king_knight.png</a>
+	<a href="../hsptv/koma.bmp">koma.bmp</a>
+	<a href="../hsptv/koma.png">koma.png</a>
+	<a href="../hsptv/logop.bmp">logop.bmp</a>
 	<a href="../hsptv/onibtn.gif">onibtn.gif</a>
 	<a href="../hsptv/shootchr.bmp">shootchr.bmp</a>
 	<a href="../hsptv/sozai1.jpg">sozai1.jpg</a>
+	<a href="../hsptv/sozai10.jpg">sozai10.jpg</a>
+	<a href="../hsptv/sozai11.jpg">sozai11.jpg</a>
+	<a href="../hsptv/sozai12.jpg">sozai12.jpg</a>
+	<a href="../hsptv/sozai13.jpg">sozai13.jpg</a>
+	<a href="../hsptv/sozai14.jpg">sozai14.jpg</a>
+	<a href="../hsptv/sozai15.jpg">sozai15.jpg</a>
 	<a href="../hsptv/sozai2.jpg">sozai2.jpg</a>
 	<a href="../hsptv/sozai3.jpg">sozai3.jpg</a>
 	<a href="../hsptv/sozai4.jpg">sozai4.jpg</a>
@@ -50,12 +58,25 @@
 	<a href="../hsptv/sozai7.jpg">sozai7.jpg</a>
 	<a href="../hsptv/sozai8.jpg">sozai8.jpg</a>
 	<a href="../hsptv/sozai9.jpg">sozai9.jpg</a>
-	<a href="../hsptv/sozai10.jpg">sozai10.jpg</a>
-	<a href="../hsptv/sozai11.jpg">sozai11.jpg</a>
-	<a href="../hsptv/sozai12.jpg">sozai12.jpg</a>
-	<a href="../hsptv/sozai13.jpg">sozai13.jpg</a>
-	<a href="../hsptv/sozai14.jpg">sozai14.jpg</a>
-	<a href="../hsptv/sozai15.jpg">sozai15.jpg</a>
+	<a href="../hsptv/tamadot.bmp">tamadot.bmp</a>
+	<a href="../hsptv/tamadot.png">tamadot.png</a>
+	<a href="../hsptv/tamaface.bmp">tamaface.bmp</a>
+	<a href="../hsptv/tamaface.png">tamaface.png</a>
+	<a href="../hsptv/tamane_b.png">tamane_b.png</a>
+	<a href="../hsptv/tamane_b1.png">tamane_b1.png</a>
+	<a href="../hsptv/tamane_b2.png">tamane_b2.png</a>
+	<a href="../hsptv/tamane_b3.png">tamane_b3.png</a>
+	<a href="../hsptv/tamane_b4.png">tamane_b4.png</a>
+	<a href="../hsptv/tamane_b5.png">tamane_b5.png</a>
+	<a href="../hsptv/tamane_b6.png">tamane_b6.png</a>
+	<a href="../hsptv/tamane_s.png">tamane_s.png</a>
+	<a href="../hsptv/tamane_s1.png">tamane_s1.png</a>
+	<a href="../hsptv/tamane_s2.png">tamane_s2.png</a>
+	<a href="../hsptv/tamane_s3.png">tamane_s3.png</a>
+	<a href="../hsptv/tamane_s4.png">tamane_s4.png</a>
+	<a href="../hsptv/tamane_s5.png">tamane_s5.png</a>
+	<a href="../hsptv/tamane_s6.png">tamane_s6.png</a>
+	<a href="../hsptv/tcard.png">tcard.png</a>
 		</pre>
 
 
@@ -99,14 +120,14 @@
 
 		<h2 id="LICENCE">著作権とライセンス</h2>
 		<p>
-		HSP3.31では、自由に使用できる素材として、HSPTVフォルダ素材に
+		HSP3では、自由に使用できる素材として、HSPTVフォルダ素材に
 		サウンド(.wav、.mid)、画像(.jpg、.bmp、.png)を同梱しています。
 		HSPTVフォルダに含まれる素材は、onion softwareが著作権を持っています。
 		</p>
 		<p>
 		HSPTVフォルダ内に標準で含まれている素材は、
 		ユーザーがソフトを作成する際に、商用利用も含めて自由に使用・配布することができます。
-		著作権表記をする場合は、ドキュメントに「HSP3.31付属のフリー素材データを使用」
+		著作権表記をする場合は、ドキュメントに「HSP3付属のフリー素材データを使用」
 		のようにお書き下さい。
 		ただし、データを使用しても著作権表記を行なう義務はありません。
 		</p>
