inoviaさんによるOpenHSP修正を反映 #packopt命令によるアイコン書き換え、バージョン定義、UPX圧縮に対応 デバッグウインドウのログサイズ拡大、消去ボタンの追加 [hspinet] httpsダウンロード、バイナリファイルの保存に対応
Former-commit-id: a9b1c2aed78a126d7206b24ba5e9a7436417b967

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -594,7 +594,10 @@ i>
 			Linux版hsp3及びスクリプトエディタは、K-K(瓶詰堂)さんが作成し公開されているものをベースに実装させていただきました。
 		</p>
 		<p>
-			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、kurogomaさん、に感謝致します。
+			iconinsツールは、Kpanさん、Tetr@podさん、inoviaさんが作成し公開されているものを同梱させていただきました。
+		</p>
+		<p>
+			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、ue_daiさん、kurogomaさん、inoviaさんに感謝致します。
 		</p>
 		<p>
 			その他、HSP周辺ツール開発者ML(HSPDev-ML)の皆様及び、β版のテスト報告や、
@@ -678,7 +681,22 @@ i>
 				<p>
 		<a href="http://hsproom.me/" target="_blank">http://hsproom.me/</a>
 				</p>
+			<dt>ue_daiさん</dt>
+			<dd>
+				<p>
+		<a href="http://prograpark.ninja-web.net/" target="_blank">http://prograpark.ninja-web.net/</a>
+				</p>
 			</dd>
+			<dt>Let's HSP!</dt>
+			<dd>
+				<p>
+		<a href="http://lhsp.s206.xrea.com/" target="_blank">http://lhsp.s206.xrea.com/</a>
+				</p>
+			<dt>inoviaさん</dt>
+			<dd>
+				<p>
+		<a href="http://hsp.moe/" target="_blank">http://hsp.moe/</a>
+				</p>
 		</dl>
 
 		<!-- フッター -->
