--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -79,6 +79,17 @@
 		<dl>
 
 			<dt>
+			開発環境の機能拡充
+			</dt><br>
+			<dd>
+			<p>
+			標準で使用するHSPスクリプトエディタの機能拡張と不具合修正を行なっています。
+			実行ファイル作成時のアイコン書き換え、バージョン定義、UPX圧縮に対応したほか、
+			デバッグウインドウにコールスタック表示を追加、ログ表示機能も改修改修しています。
+			</p>
+			</dd>
+
+			<dt>
 			HSP3Dishの機能拡充
 			</dt><br>
 			<dd>
@@ -101,7 +112,7 @@
 			</dd>
 
 			<dt>
-			標準機能の拡充
+			標準命令の拡充
 			</dt><br>
 			<dd>
 			<p>
@@ -135,14 +146,16 @@
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.5でHSP3.4から追加変更された主要な項目は以下の通りです。
+			HSP3.4から追加変更された主要な項目は以下の通りです。
 		</p>
 		<UL>
 		<LI>標準機能の安定性向上と不具合の修正を行なっています
 		<LI>複数行文字列から特定の文字列を持つ行を検索するnotefind関数を追加しています
 		<LI>変数が格納しているデータのバッファサイズを調べるvarsize関数を追加しています
 		<LI>ソートを行なうための、sortval,sortstr,sortnote,sortget命令を標準で追加しています
+		<LI>実行ファイル作成時のアイコン書き換え、バージョン定義、UPX圧縮に対応しています
 		<LI>ランタイム動作の設定を行なうための新規プリプロセッサ命令、#bootoptを追加しています
+		<LI>デバッグウインドウにコールスタック表示を追加、ログ表示機能を改修
 		<LI>arduino制御、USBIO制御などのサンプルコードを拡充しています
 		<LI>mes,print命令に改行を無効にするオプションが追加されています
 		<LI>await命令を使用しないスクリプトでマルチメディアタイマーによる負荷を抑制しています
@@ -154,6 +167,7 @@
 		<LI>HGIMG4でのみ使用が可能だった、setcls、celputm命令がHSP3Dishすべてで使用可能になっています
 		<LI>HSP3Dish Helperツールも、より便利で手軽に利用できようになりました
 		<LI>hspextプラグインでバイナリデータのシリアル送信を行なうcomputb命令を追加しています
+		<LI>hspinetプラグインでhttps通信、バイナリデータ取得に対応しています
 		<LI>HSP3オフィシャル素材 "珠音（たまね）"を2D,3Dともに大幅に追加しています
 		<LI>HGIMG3にある不具合のいくつかを修正しています
 		<LI>llmod3,HGIMG/HGIMGX,HSPDXのプラグイン・モジュールは非推奨となっています
