HSP3.5β6パッケージの更新
Former-commit-id: 020acb11cc9d29cc14301564fa97e08c6fafeb87

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -760,7 +760,14 @@
 	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
-	拡張子が「.wav」「.mp3」「.ogg」「.aac」のファイルに対応しています。
+	mmload命令で同時に読み込むバッファの数が30を超えた場合、正しく再生されない報告を頂いています。<br>
+	これは、android上のOpenSL/ES上の制約によるもので、この問題は修正していく予定です。
+	とり急ぎは、mmloadで使用するバッファの数を必要に応じて切り替えるなどして30以下に抑えるようお願い致します。
+	(特に音楽の再生などは、同時に行なう必要がないので1つのバッファIDを共有するようにした方がいいです)<br>
+	尚、android上だけの制限なので、WindowsやiOS上では問題ありません。
+	</p>
+	<p>
+	サウンドは、拡張子が「.wav」「.mp3」「.ogg」「.aac」のファイルに対応しています。
 	.aacや.oggについては、すべてのフォーマットをサポートしていないので注意してください。
 	「.wav」「.mp3」については、Windows版を含めすべてのhsp3dishで幅広くサポートされている形式です。<br>
 	サウンドのファイルは必ずプロジェクトディレクトリ内のassetsフォルダに入れるようにしてください。data.dpmに含めるとOSのシステム側から読み取ることができません。
