--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -1105,7 +1105,7 @@
 			#include "hsp3utf.as"
 		</pre>
 		<p>
-			詳しくは、ドキュメント hsp3utf.txtをご覧ください。
+			詳しくは、ドキュメント <a href="hsp3utf.txt">hsp3utf.txt</a>をご覧ください。
 		</p>
 
 
@@ -1131,6 +1131,8 @@
 			　(スクリプト全体が使用できるメモリサイズは64bitアプリに準拠します)
 			<li>従来の32bit版プラグインとは互換性がありません
 			<li>COM関連の命令が正しく動作しないことがあります
+			<li>将来の64bit(x64)ランタイムは、文字コードをUTF8として扱う予定です
+			<li>#packopt命令によるアイコンの書き換えに対応していません
 		</ul>
 
 
