ドキュメントの修正
Former-commit-id: 28dd93ad2fd741e7797110716bb451051ca70c18

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -59,7 +59,7 @@
 	</p>
 	<pre>
 	iOS Developer Program
-	<a href="http://developer.apple.com/jp/programs/ios/">http://developer.apple.com/jp/programs/ios/</a>
+	<a href="https://developer.apple.com/programs/jp/">https://developer.apple.com/programs/jp/</a>
 	</pre>
 	<p>
 	このドキュメントでは、Xcodeが実際に動作し、iPhone/iPadの実機にプログラムが転送できることを前提として、HSP3Dishの導入方法を解説します。
