ドキュメントの修正
Former-commit-id: e58781ce2e5723e6f83dbb33a45f0f89cbc5a4cb

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -588,7 +588,7 @@ i>
 			デバッグウインドウのコールスタック表示などは、mjhd_otsukaさんが開発したものを使用させて頂きました。
 		</p>
 		<p>
-			hsp3utfは、tds12さんが作成し公開されているものをベースに同梱させていただきました。
+			hsp3utf及びmodclbk3.hspは、tds12さんが作成し公開されているものをベースに同梱させていただきました。
 		</p>
 		<p>
 			Linux版hsp3及びスクリプトエディタは、K-K(瓶詰堂)さんが作成し公開されているものをベースに実装させていただきました。
