--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -170,6 +170,7 @@
 		<LI>hspinetプラグインでhttps通信、バイナリデータ取得に対応しています
 		<LI>HSP3オフィシャル素材 "珠音（たまね）"を2D,3Dともに大幅に追加しています
 		<LI>HGIMG3にある不具合のいくつかを修正しています
+		<LI>API呼び出しのコールバックを実現するモジュール・modclbk3.hspを同梱しています
 		<LI>llmod3,HGIMG/HGIMGX,HSPDXのプラグイン・モジュールは非推奨となっています
 		<LI>HSPLetのパッケージをフルセットから除外しています
 		</UL>
